rospy_ws/log/build_2021-12-06_19-43-02/lidar_udp_catch/stdout_stderr.log
running egg_info
writing ../../build/lidar_udp_catch/lidar_udp_catch.egg-info/PKG-INFO
writing dependency_links to ../../build/lidar_udp_catch/lidar_udp_catch.egg-info/dependency_links.txt
writing entry points to ../../build/lidar_udp_catch/lidar_udp_catch.egg-info/entry_points.txt
writing requirements to ../../build/lidar_udp_catch/lidar_udp_catch.egg-info/requires.txt
writing top-level names to ../../build/lidar_udp_catch/lidar_udp_catch.egg-info/top_level.txt
reading manifest file '../../build/lidar_udp_catch/lidar_udp_catch.egg-info/SOURCES.txt'
writing manifest file '../../build/lidar_udp_catch/lidar_udp_catch.egg-info/SOURCES.txt'
running build
running build_py
copying lidar_udp_catch/lidar_udp_catch.py -> /home/itolab-chotaro/HDD/SBIR-sit/ros_ws/build/lidar_udp_catch/build/lib/lidar_udp_catch
running install
running install_lib
copying /home/itolab-chotaro/HDD/SBIR-sit/ros_ws/build/lidar_udp_catch/build/lib/lidar_udp_catch/lidar_udp_catch.py -> /home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/python3.6/site-packages/lidar_udp_catch
byte-compiling /home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/python3.6/site-packages/lidar_udp_catch/lidar_udp_catch.py to lidar_udp_catch.cpython-36.pyc
  File "/home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/python3.6/site-packages/lidar_udp_catch/lidar_udp_catch.py", line 25
    for i in range(43:44):
                     ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/python3.6/site-packages/lidar_udp_catch-0.0.0-py3.6.egg-info' (and everything under it)
Copying ../../build/lidar_udp_catch/lidar_udp_catch.egg-info to /home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/python3.6/site-packages/lidar_udp_catch-0.0.0-py3.6.egg-info
running install_scripts
Installing lidar_udp_catch script to /home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/lidar_udp_catch
writing list of installed files to '/home/itolab-chotaro/HDD/SBIR-sit/ros_ws/build/lidar_udp_catch/install.log'
